# AV-AIOT

./: .gitignore  README.md
FFmpeg/1.编译/: AAC.sh  FFmpeg.sh  ReadMe.md  x264.sh
GStreamer/: 04-bus.c  06-buffersEvents.c  13-synClock.c  14-buffering.c  15-dynCtrlPapram.c  18-pipeMani.c  20-PluginWriter-adv.MD  20-PluginWriter-base.MD  20-PluginWriter-special.MD  CMakeLists.txt
Learn2Code/Linux设备开发详解/ch09_AIO/: globalfifo.c
Learn2Code/Linux设备开发详解/ch10_irq_clock/: demo.c
Learner/AI智能FFmpeg/1编译/: Lame.sh
Learner/GStreamer/: 01-initialization.c  02-elements.c  03-bins.c  05-padsFunc.c  10-seekInfo.c  11-metadata.c  12-interface.c  16-threads.c  17-autoplugin.c  19-Advance-API.c  CMakeLists.txt  ReadMe.md
Linux设备开发详解/ch09_AIO/: Asynchronous_demos.c  globalfifo.h
